--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,6 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.1.4'
+    id 'org.springframework.boot' version '2.7.3'
     id 'io.spring.dependency-management' version '1.1.3'
 }
 
@@ -21,11 +21,30 @@ repositories {
     mavenCentral()
 }
 
+ext {
+    /**
+     * Spring Boot and springCloudVersion must be compatible.
+     * 2.6.x, 2.7.x (Starting with 2021.0.3) = 2021.0.x
+     * ref : https://spring.io/projects/spring-cloud
+     */
+    // Feign
+    set('springCloudVersion', '2021.0.3')
+}
+
+dependencyManagement {
+    imports {
+        mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
+    }
+}
+
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    // Feign
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
 }
 
 tasks.named('test') {
