--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,9 @@ ext {
      */
     // Feign
     set('springCloudVersion', '2021.0.3')
+
+    set('commonsLangVersion', '3.12.0')
+
 }
 
 dependencyManagement {
@@ -45,6 +48,10 @@ dependencies {
 
     // Feign
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign'
+
+    // for `StringUtils`
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    implementation "org.apache.commons:commons-lang3:${commonsLangVersion}"
 }
 
 tasks.named('test') {
